--- a/src/templates/newUser.test.html
+++ b/src/templates/newUser.test.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Password Reset</title>
+<title>New User</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
   @media screen {
@@ -96,7 +96,7 @@
       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
           <td align="left" bgcolor="#ffffff" style="border-radius: 16px 16px 0px 0px; padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;">
-            <h1 style="margin: 0px; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Redefina sua senha</h1>
+            <h1 style="margin: 0px; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Bem vindo !</h1>
           </td>
         </tr>
       </table>
@@ -115,7 +115,7 @@
             <p style="margin: 0px;">
               Olá {{nome}}
               <br/>
-              Alguém solicitou um link para alterar sua senha. Você pode fazer isso através do botão abaixo.
+              Parece que você foi cadastrado no nosso sistema e para finalizar o processo precismos que você crie uma senha.
             </p>
           </td>
         </tr>
@@ -131,7 +131,7 @@
                     <tr>
                       <td align="center" bgcolor="#2065D1" style="border-radius: 6px;">
                         <a href="{{link}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">
-                          Nova senha
+                          Finalizar cadastro
                         </a>
                       </td>
                     </tr>
