--- a/src/templates/resetPassword.test.html
+++ b/src/templates/resetPassword.test.html
@@ -80,9 +80,9 @@
       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
           <td align="center" valign="top" style="padding: 36px 24px;">
-            <!-- <a href="https://sendgrid.com" target="_blank" style="display: inline-block;"> -->
-              <img src="./img/icon.png" alt="Logo" border="0" width="48" style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
-            <!-- </a> -->
+            <a href="http://tag-project.azurewebsites.net" target="_blank" style="display: inline-block;">
+              <img src="https://i.imgur.com/LoKB5bX.png" alt="Logo" border="0" width="48" style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
+            </a>
           </td>
         </tr>
       </table>
@@ -156,7 +156,7 @@
         <tr>
           <td align="left" bgcolor="#ffffff" style="border-radius: 0px 0px 16px 16px; padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
             <p style="margin: 0px;">Obrigado,</p>
-            <p style="margin: 0px; font-weight: bold;">TAG</p>
+            <p style="margin: 0px; font-weight: bold;">Equipe TAG</p>
           </td>
         </tr>
         <!-- end copy -->
